# aviato

./: .gitignore  .yamllint.yml  ARCHITECTURE.md  CLAUDE.md  LICENSE  MANIFEST.in  OVERLAY.md  README.md  REQUIREMENTS.md  REVIEW-FINDINGS-11.md  REVIEW-FINDINGS-9.md  SECURITY.md  WORKFLOW-HARDENING-PLAN.md  latest  policy.yml  pyproject.toml  versions.json  zensical.toml
.github/: CODEOWNERS  aviato-privileged-review.json  aviato.seed.json  aviato.yaml  dependabot.yml
.github/workflows/: aviato-ci.yml  aviato-docs.yml  aviato-drift.yml  aviato-privileged-review.yml  aviato-protection-checkpoint.yml  ci.yml  docs.yml  reusable-app-store-connect.yml  reusable-common-lint.yml  reusable-consumer-automation.yml  reusable-docker-ghcr.yml  reusable-docs-pages.yml  reusable-node-ci.yml  reusable-pypi-publish.yml  reusable-python-ci.yml  reusable-release-gate.yml  reusable-release.yml  reusable-security-baseline.yml  reusable-swift-ci.yml
.review/: c15_r1.md  c15_r1_prompt.txt  c15_r2.md  c15_r2_prompt.txt  c15_r3.md  c15_r3_prompt.txt  c15_r4.md  c15_r4_prompt.txt
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/requirements/: index.html
0.3.0/specifications/: index.html
0.4.1-alpha1/: 404.html  index.html  search.json  sitemap.xml
0.4.1-alpha1/requirements/: index.html
0.4.1-alpha1/specifications/: index.html
0.4.1-alpha2/: 404.html  index.html  sitemap.xml
0.4.1-alpha2/requirements/: index.html
0.4.1-alpha2/specifications/: index.html
0.6.0/: 404.html  index.html  search.json  sitemap.xml
0.6.0/requirements/: index.html
0.6.0/specifications/: index.html
0.6.1/: 404.html  index.html  search.json  sitemap.xml
0.6.1/requirements/: index.html
0.6.1/specifications/: index.html
aviato/: __init__.py  _codeql_canary.py  audit.py  authority_verifier.py  botstatus.py  cli.py  command.py  github.py  github_platform.py  library_source.py  paths.py  policy.py  profiles.py  release_checkpoint.py  repos.py  rulesets.py  validation.py
aviato/core/: __init__.py  actionpins.py  bootstrap.py  compiler.py  composition.py  consent.py  (+35 more)
dev/: 404.html  index.html  search.json  sitemap.xml
docs/: index.md  recent-fixes.md  roadmap.md
profiles/: node-service.yaml  python-component.yaml  python-library.yaml  python-service.yaml  swift-app.yaml
rulesets/: protect-default-branch.json  release-tag-format.json
scripts/: apply-rulesets.sh  audit-repos.sh  build-approved-release.py  regen-privileged-execution-manifest.py  regen-templates.py  sync-docs-toolchain-pins.py  validate.sh
starter/: AGENTS.md  CLAUDE.md  README.md
templates/: app-store-connect-release.yml  consumer-automation.yml  consumer-protection-checkpoint.yml  docker-ghcr-release.yml  docs-pages-release.yml  node-ci.yml  profile-node-service.yml  profile-python-component.yml  profile-python-library.yml  profile-python-service.yml  profile-swift-app.yml  pypi-release.yml  python-ci.yml  release-gate.yml  security-baseline.yml  swift-ci.yml
tests/: conftest.py  test_approved_release_build.py  test_audit.py  test_authority_verifier.py  test_botstatus.py  test_cli_apply_rulesets.py  test_cli_doctor.py  test_cli_drift_report.py  test_cli_is_highest.py  test_cli_lint_actions.py  test_cli_onboard.py  test_cli_onboard_proposal.py  test_cli_onboard_write.py  test_cli_provision.py  test_cli_reconcile.py  test_cli_recovery.py  test_cli_release.py  test_cli_repin_offboard.py  test_cli_scan.py  test_cli_sync.py  test_cli_version_pin.py  test_command_hardening.py  test_docs_index.py  test_docs_toolchain_parity.py  test_github.py  test_github_failclosed.py  test_github_platform.py  test_library_source.py  test_local_gate.py  test_operation_context_boundaries.py  test_pipeline_privileges.py  test_policy.py  test_privileged_review_evidence.py  test_profiles.py  test_release_checkpoint.py  test_repos.py  test_rulesets.py  test_starter_governance.py  test_validation.py  test_validation_negative.py  (+1 more)
website/: .npmrc  docusaurus.config.js  eslint.config.mjs  package-lock.json  package.json  requirements.txt  zensical.toml
(+587 files in other folders)
