[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aviato"
version = "1.0.0"
description = "Reusable GitHub policy, CI, release, and onboarding conventions."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
  # §11.3: zizmor performs uses:/image pin enforcement; pinned EXACTLY (Dependabot bumps it).
  "zizmor==1.27.0",
  # §11.3: a REAL shell parser for the fetch-execute gate (curl|bash). Regex/string matching flapped
  # for four cycles; bashlex tokenizes shell correctly (comments, 2>&1, option clusters, $()/<()).
  "bashlex==0.18",
]

[project.optional-dependencies]
# Exact pins, same §11.3 rationale as the runtime gate deps above: a floating gate
# toolchain lets a new lint/test release red (or silently green) CI with no repo
# change. Dependabot's pip ecosystem bumps these deliberately.
dev = [
  "black==26.5.1",
  "build==1.5.0",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
  # CI-failure fix: mypy --strict needs the PyYAML stubs in the SAME env (they were
  # only ever installed locally); without them the type gate fails on import-untyped.
  "types-PyYAML==6.0.12.20260518",
  # CI-failure fix: validate.sh builds the wheel with --no-isolation (the local gate
  # must work offline), so the build BACKEND must exist in the ambient env — Python
  # 3.12 runners don't ship setuptools by default. Mirrors [build-system]'s floor
  # (same constraint, not a gate tool whose drift changes lint outcomes).
  "setuptools>=69",
  "yamllint==1.38.0",
]

[project.scripts]
aviato = "aviato.cli:main"

[tool.setuptools.packages.find]
include = ["aviato*"]

# Ship the module-source tree (profiles, bundles, scaffold templates) and the
# agnosticism denylist inside the wheel so a pip-installed `aviato` (e.g. the
# consumer drift automation) can resolve profiles without a source checkout.
[tool.setuptools.package-data]
aviato = ["library/**/*", "plugins/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["aviato", "tests"]
strict = true
mypy_path = ["typings"]
# Local build litter must not alias the package (duplicate-module errors).
exclude = ["^build/", "^_wheelout/", "^dist/"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
